<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Fenrir VK</string>
    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_parser_names" translatable="false">
        <item>Json</item>
        <item>MessagePack</item>
    </string-array>
    <string-array name="array_parser_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_rendering_mode_names">
        <item>Software</item>
        <item>Hardware enabled</item>
        <item>Force Hardware</item>
    </string-array>
    <string-array name="array_rendering_mode_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_end_list_anim_names">
        <item>Success</item>
        <item>Circles</item>
        <item>Wave</item>
    </string-array>
    <string-array name="array_end_list_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_limit_cache_images_names" translatable="false">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>128 MB</item>
        <item>256 MB</item>
        <item>512 MB</item>
        <item>1 GB</item>
    </string-array>
    <string-array name="array_limit_cache_images_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>
    <string-array name="array_chat_background_names">
        <item>Solid</item>
        <item>Cookies</item>
        <item>Lines</item>
        <item>Runes</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="array_chat_background_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="array_lifecycle_names">
        <item>1 min.</item>
        <item>2 min.</item>
        <item>5 min.</item>
        <item>10 min.</item>
        <item>15 min.</item>
    </string-array>
    <string-array name="array_lifecycle_items" translatable="false">
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>
    <string-array name="array_ffmpeg_names">
        <item>Off</item>
        <item>Enabled</item>
        <item>Primary</item>
    </string-array>
    <string-array name="array_ffmpeg_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="preview_preview_size" translatable="false">
        <item>S: 75 px</item>
        <item>M: 130 px</item>
        <item>X: 604 px</item>
        <item>Y: 807 px</item>
        <item>Z: 1280 px</item>
        <item>W: 2560 px</item>
    </string-array>
    <string-array name="preview_preview_size_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="picasso_dispatcher_names" translatable="false">
        <item>Handler</item>
        <item>Coroutine</item>
    </string-array>
    <string-array name="picasso_dispatcher_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_photo_rounded_names">
        <item>Always round</item>
        <item>Round if single photo</item>
        <item>Don\'t round</item>
    </string-array>
    <string-array name="array_photo_rounded_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_news_start_updates_names">
        <item>Disable</item>
        <item>Update</item>
        <item>Ask</item>
    </string-array>
    <string-array name="array_news_start_updates_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_swipes_chats_names">
        <item>Disable</item>
        <item>Slidr</item>
    </string-array>
    <string-array name="array_swipes_chats_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_donate_anim_names">
        <item>Disable</item>
        <item>Lines</item>
        <item>Fire Ring</item>
    </string-array>
    <string-array name="array_donate_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_is_open_url_internal_names">
        <item>Disable</item>
        <item>Only VK</item>
        <item>All links</item>
    </string-array>
    <string-array name="array_is_open_url_internal_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_long_click_photo_names">
        <item>Disable</item>
        <item>Download</item>
        <item>Rotate</item>
    </string-array>
    <string-array name="array_long_click_photo_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_autoplay_video_on_posts_names">
        <item>Disable</item>
        <item>Only GIFs (caching)</item>
        <item>All videos in posts (high data and cpu loads)</item>
    </string-array>
    <string-array name="array_autoplay_video_on_posts_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>
    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="array_accounts_input">
        <item>VK Android</item>
        <item>Kate</item>
        <item>Hidden VK Android</item>
        <item>Hidden Kate</item>
        <item>Hidden IOS</item>
    </string-array>
    <string-array name="array_sex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="array_month_items">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string name="crash_error_activity_error_occurred_explanation">Unhandled exception.</string>
    <string name="crash_error_activity_restart_app">Restart</string>
    <string name="crash_error_activity_error_details">Details</string>
    <string name="crash_error_activity_error_details_title">Exception details</string>
    <string name="crash_error_activity_error_details_close">Close</string>
    <string name="crash_error_activity_error_details_copy">Copy</string>
    <string name="crash_error_activity_error_details_copied">Copied</string>
    <string name="crash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="crash_error_activity_out_of_memory">Out of memory!</string>
    <string name="dialogs">Chats</string>
    <string name="dialog_day_today">Today</string>
    <string name="dialog_day_yesterday">Yesterday</string>
    <string name="dialog_day_ten_days">Last 10 days</string>
    <string name="dialog_pinned">Pinned</string>
    <string name="dialog_day_older">Older</string>
    <string name="dialog_me">You:</string>
    <string name="attachments">[attachments]</string>
    <string name="sticker_message">[sticker]</string>
    <string name="refresh">Refresh</string>
    <string name="group_chat_leave">Leave chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="edit_chat">Edit chat</string>
    <string name="chat_users">Chat participants</string>
    <string name="invite_link">Invite Link</string>
    <string name="search">Search</string>
    <string name="attachments_in_chat">Chat materials</string>
    <string name="show_profile">Profile</string>
    <string name="create_pin_code_title">Create a PIN</string>
    <string name="key_exchange">Key exchange</string>
    <string name="vk_url" translatable="false">https://vk.ru/</string>
    <string name="encryption_status">Encryption status</string>
    <string name="ask_for_pin_on_application_start_title">PIN on app start</string>
    <string name="delayed_pin_for_entrance_title">Don\'t ask every time</string>
    <string name="community_options_main_info_title">Main information</string>
    <string name="community_options_name_title">Title</string>
    <string name="community_options_description_title">Group description</string>
    <string name="community_options_link_title">Page address</string>
    <string name="community_options_type_title">Group type</string>
    <string name="community_options_comments_title">Comments</string>
    <string name="community_options_feedback_title">Feedback</string>
    <string name="community_options_enable_comments">Comments enabled</string>
    <string name="community_options_comments_filter_title">Comment filter</string>
    <string name="community_options_enable_profanity_filter">Enable profanity filter</string>
    <string name="community_options_enable_keyword_filter">Enable keyword filter</string>
    <string name="community_options_separate_keywords_by_commas">List keywords separated by commas.</string>
    <string name="proxy_address_helper_text">Server address</string>
    <string name="proxy_port_helper_text">Port</string>
    <string name="phoxy_address_hint" translatable="false">10.0.0.1</string>
    <string name="phoxy_port_hint" translatable="false">3128</string>
    <string name="phoxy_username_hint" translatable="false">Login</string>
    <string name="phoxy_pass_hint" translatable="false">Password</string>
    <string name="button_save">Save</string>
    <string name="proxy_authorization">Authorization</string>
    <string name="allow_fingerprint_title">Allow fingerprint</string>
    <string name="last_read">Last read message</string>
    <string name="download_peer_to">Export chat</string>
    <string name="make_screenshot">Take a screenshot</string>
    <string name="short_link">Link shortening</string>
    <string name="pin_digit">PIN code</string>
</resources>