<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    app:cardElevation="1dp"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?colorPrimary"
            android:elevation="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pin_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_pin_code_title"
                android:textColor="?white_color_contrast_fix"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/value_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:padding="@dimen/content_large_margin">

                <ImageView
                    android:id="@+id/pincode_digit_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_digit"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/runic_letter_algis"
                    app:tint="?white_color_contrast_fix" />

                <ImageView
                    android:id="@+id/pincode_digit_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_digit"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/runic_letter_manaz"
                    app:tint="?white_color_contrast_fix" />

                <ImageView
                    android:id="@+id/pincode_digit_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_digit"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/runic_letter_naudiz"
                    app:tint="?white_color_contrast_fix" />

                <ImageView
                    android:id="@+id/pincode_digit_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_digit"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/runic_letter_raido"
                    app:tint="?white_color_contrast_fix" />
            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/fingerprint_sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:checked="false"
                android:text="@string/allow_fingerprint_title"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?white_color_contrast_fix" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/pin_entrance_sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:checked="false"
                android:text="@string/ask_for_pin_on_application_start_title"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?white_color_contrast_fix" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/pin_delayed_pin_for_entrance_sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:checked="false"
                android:text="@string/delayed_pin_for_entrance_title"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?white_color_contrast_fix" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <dev.ragnarok.fenrir.view.KeyboardView
                android:id="@+id/keyboard"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:keyboard_theme="fullscreen" />

        </FrameLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
